tests/fixtures/invalid/pow_set_str_list.py
# Cannot call pow() with Set[int], Str, List[int]
x = pow({1, 2, 3}, "hello", [1, 2, 3])
